[package]
name = "arduino-displays"
version = "0.1.0"
authors = ["wert007 <pablohamacher@web.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduino-displays"
test = false
bench = false

[features]
default = ["oled"]
oled = []
epaper = []

[dependencies]
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-progmem = "0.3.1"

[build-dependencies]
elf = "0.7.1"
# font8x8 = { version = "0.3.1", features = [] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
